--- a/src/components/hero/HeroComponent.css
+++ b/src/components/hero/HeroComponent.css
@@ -17,7 +17,8 @@
     position: absolute;
     right: 0;
     z-index: 1;
-    margin-top: -70px;
+    margin-top: -140px;
+    padding-inline-end: 15px;
 }
 
 .me {
@@ -28,7 +29,7 @@
     right: 0;
     z-index: 10;
     padding-block: 50px;
-    margin-top: -80px;
+    margin-top: -150px;
 }
 
 .hero-container {
@@ -46,7 +47,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+  height: 60vh;
 }
 
 .and-gif {
@@ -73,7 +74,7 @@
 }
 
 
-@media(max-width:1000px){  
+@media(max-width:768px){  
   .green-circles {
       margin: 0px;
       background-repeat: no-repeat;
@@ -89,8 +90,8 @@
       position: absolute;
       right: 0;
       z-index: 10;
-      padding-block: 30px;
-      margin-top: -130px;
+      padding-block: 9px;
+      margin-top: -120px;
   }
   
   .hero-container {
