--- a/src/components/navbar/NavbarComponent.css
+++ b/src/components/navbar/NavbarComponent.css
@@ -1,101 +1,123 @@
-header{
-  width:100%;
-  height: 100px;
+.logo_class {
+  width: 70px;
+}
+
+.nav_header {
+  width: 80%;
+  height: 70px;
+  background: #fefefe;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  position: fixed;
-  z-index: 99;
-  box-shadow: #000 5px 5px;
-  background-color: #3ddc84;
-  border-radius: 5px;
-}
-#chk1{
-  display: none;  
+  justify-content: space-between;
+  padding: 0 40px;
+  border-radius: 10px;
+  margin: 5px auto;
+  border: black 2px solid;
 }
 
-.hm{
-  margin-left: 25rem;
+.nv_logo {
+  width: 120px;
+  margin-top: 8px;
 }
 
-
-i{
-  color: #000;
-  cursor: pointer;
-}
-header .logo{
-  flex: 1;
-  color:#000;
-   
-  margin-left: 50px;
-  text-transform: uppercase;
-  font-size: 15px;
+nav .nv_logo {
+  display: none;
 }
 
-header ul {
-  flex:2;
+nav ul {
   display: flex;
-  justify-content: space-evenly;
-}
-header ul li{
   list-style: none;
+  
+
 }
-header ul li a{
+
+nav ul li a {
   text-decoration: none;
-  color:#000;
-  font-weight: 700;
-  text-transform: uppercase;
-  padding: 10px 15px;
+
+  color: #212526;
+  display: block;
+  margin: 0 2px;
+  font-weight: 600;
+  padding: 8px 18px;
+  transition: 0.2s;
+  border-radius: 30px;
 }
 
-
-
-header ul li a:hover{
-  border-bottom: 2px solid rgb(202, 47, 47);
-  box-shadow: rgb(202, 47, 47) 0px -2px;
-  /* transition: 2.4s ease; */
+nav ul li a:hover {
+  background: #675cff;
+  color: #fff;
+  transition: 0.2s ease-out;
 }
 
-header .menu{
-  font-size: 2.5em;
+/* nav ul li a.active {
+  background: #675cff;
+  color: #fff;
+} */
+
+.hamburger {
   display: none;
+  height: fit-content;
+  cursor: pointer;
+  padding: 3px 8px;
+  border-radius: 5px;
+  transition: 0.2S;
 }
 
-.sc{
-  display: none;
+.hamburger:hover {
+  background: #f6f4ff;
 }
 
-@media(max-width:1000px){
-  header ul{
-      margin-right: 20px;
-      padding-right: 30px;
-      position: fixed;
-      top:100px;
-      right: -100%;
-      height: calc(100vh - 250px);
-      width:50%;
-      flex-direction: column;
-      align-items: center;
-      transition: right 0.5s linear;
-      background-color: #3ddc84;
-      border-radius: 50px;
+.hamburger div {
+  width: 30px;
+  height: 2px;
+  margin: 6px 0;
+  background: #212526;
+}
 
-  }
-  .sc{
-      display: block;
-  }
-   
-  .hm{
-    display: none;
-  }
-  header .menu{
-      display: block;
-      width:100px;
-      text-align: center;
-  }
-  #chk1:checked ~ ul{
-      right: 0;
-      
+@media only screen and (max-width: 768px) {
+  .nav_header {
+    width: 90%;
+    padding: 0 20px;
   }
 
+  nav {
+    position: absolute;
+    left: -300px;
+    top: 0;
+    z-index: 999;
+    width: 280px;
+    height: 50vh;
+    border-radius: 30px;
+    background-color: #fefefe;
+    transition: 0.2s;
+    box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.05);
+  }
+
+  #nav_check:checked ~ nav{
+    left: 0;
+  }
+
+  nav .nv_logo {
+    display: block;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    margin-left: 30px;
+  }
+
+  nav ul li a {
+    margin-bottom: 5px;
+    padding: 10px 15px;
+    border-radius: 5px;
+  }
+
+  nav ul {
+    display: block;
+    padding: 0 20px;
+    margin-top: 30px;
+  }
+
+  .hamburger {
+    display: block;
+  }
 }
