--- a/src/components/home/hero/HeroComponent.css
+++ b/src/components/home/hero/HeroComponent.css
@@ -78,23 +78,23 @@
   .green-circles {
     margin: 0px;
     background-repeat: no-repeat;
-    height: 27em;
+    height: 21em;
     position: absolute;
     z-index: 1;
-    margin-top: -140px;
-    right: -65px;
-  }
+    margin-top: -100px;
+    right: 0px;
+}
 
-  .me {
-    margin: 0px;
-    background-repeat: no-repeat;
-    height: 30em;
-    position: absolute;
-    right: -70px;
-    z-index: 10;
-    padding-block: 10px;
-    margin-top: -120px;
-  }
+.me {
+  margin: 0px;
+  background-repeat: no-repeat;
+  height: 20em;
+  position: absolute;
+  right: 30px;
+  z-index: 10;
+  padding-block: 10px;
+  margin-top: -80px;
+}
 
   .hero-container {
     padding-top: 18vh;
@@ -115,7 +115,7 @@
 
   .abt-me .bld {
     margin: 0;
-    font-size: 3em;
+    font-size: 3.5em;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
   }
@@ -131,4 +131,47 @@
     font-size: 1em;
     text-align: center;
   }
+}
+
+@media only screen and (min-width: 769px) and (max-width: 1300px) {
+  .me {
+    margin-right: 135px;
+    background-repeat: no-repeat;
+    height: 33em;
+    position: absolute;
+    right: 0;
+    z-index: 10;
+    padding-block: 20px;
+    margin-top: -100px;
+}
+
+.green-circles {
+    margin-right: 120px;
+    background-repeat: no-repeat;
+    height: 31em;
+    position: absolute;
+    right: 0;
+    z-index: 1;
+    margin-top: -100px;
+    padding-inline-end: 15px;
+}
+
+.abt-me .hello {
+    margin: 0;
+    font-size: 2vh;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+}
+
+.abt-me .bld {
+    margin: 0;
+    font-size: 2em;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+}
+
+.my-des {
+    font-size: 2vh;
+    text-align: center;
+}
 }
