--- a/src/components/education/edu/EduComponent.css
+++ b/src/components/education/edu/EduComponent.css
@@ -1,161 +1,161 @@
 .timeline {
-    position: relative;
-    max-width: 1200px;
-    margin: 100px auto;
+  position: relative;
+  max-width: 1200px;
+  margin: 100px auto;
+}
+
+.edu-container {
+  padding: 10px 50px;
+  position: relative;
+  width: 50%;
+  animation: movedown 0.5s linear forwards;
+  opacity: 0;
+}
+
+@keyframes movedown {
+  0% {
+    opacity: 1;
+    transform: translateY(-30px);
   }
-  
+
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+.edu-container:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.edu-container:nth-child(2) {
+  animation-delay: 1s;
+}
+
+.edu-container:nth-child(3) {
+  animation-delay: 2s;
+}
+
+.text-box {
+  padding: 20px 30px;
+  background: #fff;
+  position: relative;
+  border-radius: 6px;
+  font-size: 15px;
+  border: 4px black solid;
+}
+
+.left-container {
+  left: 0;
+}
+
+.right-container {
+  left: 50%;
+}
+
+.edu-container img {
+  position: absolute;
+  width: 40px;
+  border-radius: 50%;
+  right: -20px;
+  top: 32px;
+  z-index: 10;
+  border: 3px black solid;
+}
+
+.right-container img {
+  left: -20px;
+}
+
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 6px;
+  height: 100%;
+  background: #000;
+  top: 0;
+  left: 50%;
+  margin-left: -3px;
+  z-index: -1;
+  animation: moveline 2.5s linear forwards;
+}
+
+@keyframes moveline {
+  0% {
+    height: 0;
+  }
+
+  100% {
+    height: 100%;
+  }
+}
+
+.text-box h2 {
+  font-weight: 600;
+}
+
+.text-box small {
+  display: inline-block;
+  margin-bottom: 15px;
+}
+
+
+.left-container-arrow,
+  .right-container-arrow{
+    height: 0;
+    width: 0;
+    position: absolute;
+    top: 28px;
+    z-index: 1;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+  }
+.left-container-arrow {
+  border-left: 15px solid #000;
+  right: -15px;
+}
+
+.right-container-arrow {
+  border-right: 15px solid #000;
+  left: -15px;
+}
+
+@media screen and (max-width: 768px) {
+  .timeline {
+    margin: 50px auto;
+  }
+
+  .timeline::after {
+    left: 31px;
+  }
+
   .edu-container {
-    padding: 10px 50px;
-    position: relative;
-    width: 50%;
-    animation: movedown 0.5s linear forwards;
-    opacity: 0;
+    width: 100%;
+    padding-left: 80px;
+    padding-right: 25px;
   }
-  
-  @keyframes movedown {
-    0%{
-      opacity: 1;
-      transform: translateY(-30px);
-    }
-    100%{
-      opacity: 1;
-      transform: translateY(0px);
-    }
-  }
-  
-  .edu-container:nth-child(1){
-    animation-delay: 0s;
-  }
-  .edu-container:nth-child(2){
-    animation-delay: 1s;
-  }
-  .edu-container:nth-child(3){
-    animation-delay: 2s;
-  }
-  
+
   .text-box {
-    padding: 20px 30px;
-    background: #fff;
-    position: relative;
-    border-radius: 6px;
-    font-size: 15px;
-    border: 4px black solid;
+    font-size: 13px;
   }
-  
-  .left-container {
+
+  .text-box small {
+    margin-bottom: 10px;
+  }
+
+  .right-container {
     left: 0;
   }
-  
-  .right-container {
-    left: 50%;
+
+  .right-container img,
+  .left-container img {
+    left: 10px;
   }
-  
-  .edu-container img{
-    position: absolute;
-    width: 40px;
-    border-radius: 50%;
-    right: -20px;
-    top: 32px;
-    z-index: 10;
-    border: 3px black solid;
+
+  .left-container-arrow,
+  .right-container-arrow {
+    border-right: 50px solid #fff;
+    border-left: 0;
+    left: -25px;
   }
-  
-  .right-container img{
-    left: -20px;
-  }
-  .timeline::after{
-    content: '';
-    position: absolute;
-    width: 6px;
-    height: 100%;
-    background: #000;
-    top: 0;
-    left: 50%;
-    margin-left: -3px;
-    z-index: -1;
-    animation: moveline 2.5s linear forwards;
-  }
-  
-  @keyframes moveline{
-    0%{
-      height: 0;
-    }
-    100%{
-      height: 100%;
-    }
-  }
-  
-  .text-box h2{
-    font-weight: 600;
-  }
-  
-  .text-box small{
-    display: inline-block;
-    margin-bottom: 15px;
-  }
-  
-  
-  /* .left-container-arrow,
-  .right-container-arrow{
-    height: 0;
-    width: 0;
-    position: absolute;
-    top: 28px;
-    z-index: 1;
-    border-top: 15px solid transparent;
-    border-bottom: 15px solid transparent;
-  } */
-  .left-container-arrow{
-    height: 0;
-    width: 0;
-    position: absolute;
-    top: 28px;
-    z-index: 1;
-    border-top: 15px solid transparent;
-    border-bottom: 15px solid transparent;
-    border-left: 15px solid #000;
-    right: -15px;
-  }
-  
-  .right-container-arrow{
-    height: 0;
-    width: 0;
-    position: absolute;
-    top: 28px;
-    z-index: 1;
-    border-top: 15px solid transparent;
-    border-bottom: 15px solid transparent;
-    border-right: 15px solid #000;
-    left: -15px;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .timeline{
-      margin: 50px auto;
-    }
-    .timeline::after{
-      left: 31px;
-    }
-    .edu-container{
-      width: 100%;
-      padding-left: 80px;
-      padding-right: 25px;
-    }
-    .text-box{
-      font-size: 13px;
-    }
-    .text-box small{
-      margin-bottom: 10px;
-    }
-    .right-container{
-      left: 0;
-    }
-    .right-container img, .left-container img{
-      left: 10px;
-    }
-    .left-container-arrow, .right-container-arrow{
-      border-right: 50px solid #fff;
-      border-left: 0;
-      left: -25px;
-    }
-  }
+}
