--- a/src/components/education/profiles/ProfilesComponent.css
+++ b/src/components/education/profiles/ProfilesComponent.css
@@ -5,7 +5,6 @@
     margin: 10px 0;
 }
 
-
 .edu-courses {
     --s: 150px;
     --g: 20px;
@@ -20,13 +19,11 @@
     object-fit: cover;
     clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0 50%);
     transform: translate(var(--_x, 0), var(--_y, 0)) scale(var(--_t, 1));
-    cursor: pointer;
-    /* filter: grayscale(80%); */
+    cursor: none !important;
     transition: .2s linear;
 }
 
 .edu-courses>.course-name:hover {
-    /* filter: grayscale(0); */
     z-index: 1;
     --_t: 1.2;
 }
@@ -62,10 +59,9 @@
 .courses-main {
     display: grid;
     place-content: center;
-    /* background: #aabbfb; */
 }
 
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 768px) {
     .edu-courses {
         --s: 110px;
         --g: 5px;
