--- a/src/components/navbar/NavbarComponent.css
+++ b/src/components/navbar/NavbarComponent.css
@@ -1,5 +1,7 @@
 .logo_class {
-  width: 70px;
+  position: relative;
+  top: -5px;
+  width: 55px;
 }
 
 .nav_header {
@@ -27,18 +29,15 @@ nav .nv_logo {
 nav ul {
   display: flex;
   list-style: none;
-  
-
 }
 
 nav ul li a {
   text-decoration: none;
-
   color: #212526;
   display: block;
   margin: 0 2px;
   font-weight: 600;
-  padding: 8px 18px;
+  padding: 8px 20px;
   transition: 0.2s;
   border-radius: 30px;
 }
@@ -49,10 +48,20 @@ nav ul li a:hover {
   transition: 0.2s ease-out;
 }
 
-/* nav ul li a.active {
-  background: #675cff;
+.CV {
+  border-radius: 30px;
+  background-color: #675cff;
   color: #fff;
-} */
+  margin: 0 10px;
+}
+
+.CV:hover {
+  -webkit-box-shadow: inset 0px 0px 0px 2px #675cff;
+  -moz-box-shadow: inset 0px 0px 0px 2px #675cff;
+  box-shadow: inset 0px 0px 0px 2px #675cff;
+  background-color: #fff;
+  color: #000;
+}
 
 .hamburger {
   display: none;
@@ -84,7 +93,7 @@ nav ul li a:hover {
     position: absolute;
     left: -300px;
     top: 0;
-    z-index: 999;
+    z-index: 998;
     width: 250px;
     height: 50vh;
     border-radius: 30px;
@@ -93,7 +102,7 @@ nav ul li a:hover {
     box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 1);
   }
 
-  #nav_check:checked ~ nav{
+  #nav_check:checked~nav {
     left: 0;
   }
 
