--- a/src/components/navbar/NavbarComponent.css
+++ b/src/components/navbar/NavbarComponent.css
@@ -42,7 +42,7 @@ nav ul li a {
   border-radius: 30px;
 }
 
-nav ul li a:hover {
+nav ul li a:hover,  nav ul li a.active{
   background: #675cff;
   color: #fff;
   transition: 0.2s ease-out;
