Added Github contribution, a typewriter in hero and changed the scrollbar

--- a/src/components/education/edu/EduComponent.css
+++ b/src/components/education/edu/EduComponent.css
@@ -154,7 +154,7 @@
 
   .left-container-arrow,
   .right-container-arrow {
-    border-right: 50px solid #000;
+    border-right: 50px solid #fff;
     border-left: 0;
     left: -25px;
   }
